fixed alignment

--- a/lynxPages.css
+++ b/lynxPages.css
@@ -1,6 +1,6 @@
 .twoColumnLeft {
   float: left;
-  width: min-content;
+  width: 7%;
   margin: 10px;
 }
 .twoColumnRight {
